Handles connections correctly when a connection is moved, changes z-index of connection to be bigger than node when hovering, and disables cursor pointer on disabled nodes

--- a/cdap-ui/app/directives/dag-plus/my-dag.less
+++ b/cdap-ui/app/directives/dag-plus/my-dag.less
@@ -124,15 +124,20 @@ my-dag-plus {
 
       .border-radius(4px);
       .box {
-        cursor: pointer;
         height: @node-box-height-big;
         .border-color-hover(@node-box-height-big);
 
         .node {
+          cursor: initial;
+
           .endpoint-circle {
             top: 41px;
           }
         }
+      }
+
+      .jsplumb-connector {
+        cursor: initial;
       }
     }
 
@@ -259,12 +264,16 @@ my-dag-plus {
           white-space: nowrap;
           text-overflow: ellipsis;
 
-          .metric-records-out {
-            color: @records-out-metric-color;
-          }
+          .node-metrics-labels {
+            cursor: pointer;
 
-          .metric-errors {
-            color: @error-metric-color;
+            .metric-records-out {
+              color: @records-out-metric-color;
+            }
+
+            .metric-errors {
+              color: @error-metric-color;
+            }
           }
         }
 
@@ -543,6 +552,10 @@ my-dag-plus {
       path:last-child {
         stroke-width: 0;
       }
+    }
+
+    .jsplumb-dragging {
+      z-index: 2;
     }
 
     /* metrics overlay */
